--- a/src/styles/components/Logo.module.css
+++ b/src/styles/components/Logo.module.css
@@ -1,3 +1,7 @@
+@keyframes rotate {
+  to { transform: rotate(360deg); }           
+}
+
 .logoContainer {
   display: flex;
   align-items: center;
@@ -18,6 +22,11 @@
   background-color: var(--background);
   border: 2.5px solid var(--logo);
   transform: rotate(134.72deg);
+  transition: transform 0.5s, border-radius 0.5s;
+}
+.logoContainer span:hover {
+  transform: rotate(360deg);
+  border-radius: 50%;
 }
 .logoContainer span > span {
   position: absolute;
