--- a/src/styles/components/Header.module.css
+++ b/src/styles/components/Header.module.css
@@ -1,10 +1,15 @@
 .headerContainer {
   position: absolute;
-  left: 0;
   top: 0;
-  height: 10%;
+  height: 100px;
   width: 100%;
   display: flex;
+  justify-content: center;
+}
+.headerWrapper {
+  width: 80%;
+  display: flex;
+  height: 100%;
 }
 .logoDivision {
   flex: 3;
@@ -19,6 +24,23 @@
 }
 .navigationDivision a {
   text-decoration: none;
-  color: var(--title);
-  font-size: 2.25rem;
+  color: var(--link);
+  font-size: 1.5rem;
+  background-color: none;
+  transition: color 0.5s;
+  z-index: 10;
 }
+.linkHoverEffect {
+  height: 10px;
+  width: 0px;
+  margin-top: -13px;
+  margin-left: -20px;
+  z-index: 1;
+  background: var(--link-hover-effect);
+  transition: width 0.3s;
+}
+.navigationDivision a:hover + .linkHoverEffect {
+  color: var(--link-hover);
+  width: 60px;
+}
+
