--- a/src/styles/components/Header.module.css
+++ b/src/styles/components/Header.module.css
@@ -1,9 +1,9 @@
 .headerContainer {
-  position: absolute;
   top: 0;
   height: 100px;
   width: 100%;
   display: flex;
+  z-index: 999;
   justify-content: center;
 }
 .headerWrapper {
