--- a/src/styles/components/Intro.module.css
+++ b/src/styles/components/Intro.module.css
@@ -10,12 +10,14 @@
   place-items: center;
 }
 .mainText {
-  font-size: 3.50rem;
+  font-size: 3.25rem;
   margin-left: 5rem;
   max-width: 800px;
   margin-top: -100px;
   position: relative;
   z-index: 999;
+  line-height: 50px;
+  margin-right: 5rem;
 }
 .planet {
   position: fixed;
@@ -23,8 +25,8 @@
   height: 1500px;
   background: linear-gradient(90deg, rgba(190,211,237,0) 0%, rgba(190,211,237,1) 100%);
   -webkit-box-shadow: -11px 0px 185px -51px rgba(171,232,252,1);
--moz-box-shadow: -11px 0px 185px -51px rgba(171,232,252,1);
-box-shadow: -11px 0px 185px -51px rgba(171,232,252,1);
+  -moz-box-shadow: -11px 0px 185px -51px rgba(171,232,252,1);
+  box-shadow: -11px 0px 185px -51px rgba(171,232,252,1);
   border-radius: 50%;
   right: -550px;
   z-index: 1;
@@ -36,4 +38,41 @@ box-shadow: -11px 0px 185px -51px rgba(171,232,252,1);
   max-width: 300px;
   margin-top: -10px;
   opacity: 0.7;
+}
+
+@media (max-width: 1350px) {
+  .introWrapper {
+    width: 100%;
+  }
+  .planet {
+    right: -800px;
+  }
+  .mainText {
+    font-size: 3rem;
+    max-width: 600px;
+    line-height: 40px;
+  }
+}
+
+@media (max-width: 850px) {
+  .planet {
+    right: -1000px;
+  }
+}
+
+@media (max-width: 760px) {
+  .mainText {
+    font-size: 3rem;
+    max-width: 500px;
+  }
+  .secondaryText {
+    max-width: 200px;
+  }
+}
+
+
+@media (max-width: 700px) {
+  .planet {
+    right: -1100px;
+  }
 }
