--- a/src/styles/components/Intro.module.css
+++ b/src/styles/components/Intro.module.css
@@ -19,20 +19,89 @@
   line-height: 50px;
   margin-right: 5rem;
 }
+.knowMoreButton {
+  z-index: 999;
+  position: relative;
+  width: 16rem;
+  height: 4rem;
+
+  border: none;
+  border-radius: 5px;
+  background-color: var(--link-hover-effect);
+  margin: 5rem 0 0 5rem;
+
+  font-family: Rajdhani;
+  color: var(--background);
+  font-size: 2.5rem;
+  font-weight: 400;
+}
 .planet {
   position: fixed;
-  width: 1500px;
-  height: 1500px;
-  background: linear-gradient(90deg, rgba(190,211,237,0) 0%, rgba(190,211,237,1) 100%);
-  -webkit-box-shadow: -11px 0px 185px -51px rgba(171,232,252,1);
-  -moz-box-shadow: -11px 0px 185px -51px rgba(171,232,252,1);
-  box-shadow: -11px 0px 185px -51px rgba(171,232,252,1);
+  width: 1200px;
+  height: 1200px;
   border-radius: 50%;
-  right: -550px;
+  right: -300px;
   z-index: 1;
   overflow: hidden;
+  display: inline-block;
+  box-shadow: -2px 0px 10px 1px rgba(0, 0, 0, 0.34);
 }
+.planetContent {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  position: relative;
+  background: url('https://intercol.com.br/wp-content/uploads/2018/07/world_map_PNG28.png');
+  background-position: -2638px;
+  background-size: 2638px 100%;
+  animation: move-map 30s infinite linear;
+  z-index: 1;
+}
+.planetContent:before {
+  content: '';
+  position: absolute;
+  top: 1%;
+  left: 3%;
+  width: 90%;
+  height: 90%;
+  border-radius: 50%;
+  background: radial-gradient(
+    circle at 10% 0px,
+    rgba(255, 255, 255, 0.3),
+    rgba(255, 255, 255, 0) 58%
+  );
+  filter: blur(1px);
+  z-index: 2;
+}
+.planetContent:after {
+  z-index: -1;
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0.3;
+  background: radial-gradient(
+    circle at 0% 60%,
+    rgba(210, 210, 210, 0.3),
+    rgba(210, 210, 210, 0.3) 10%,
+    #5089ce 66%,
+    #5089ce 100%
+  );
+}
+
+@keyframes move-map {
+  0% {
+    background-position: -2638px 0;
+  }
+
+  100% {
+    background-position: 0 0;
+  }
+}
+
 .secondaryText {
+  z-index: 999;
+  position: relative;
   font-size: 1.7rem;
   margin-left: 5rem;
   max-width: 300px;
@@ -69,7 +138,6 @@
     max-width: 200px;
   }
 }
-
 
 @media (max-width: 700px) {
   .planet {
