--- a/src/styles/components/Header.module.css
+++ b/src/styles/components/Header.module.css
@@ -23,6 +23,7 @@
   justify-content: space-evenly;
 }
 .navigationDivision a {
+  font-weight: 500;
   text-decoration: none;
   color: var(--link);
   font-size: 1.5rem;
@@ -49,7 +50,7 @@
   display: none;
   height: 40px;
   cursor: pointer;
-} 
+}
 
 .hamburguerButton div {
   width: 35px;
@@ -57,14 +58,14 @@
   margin-top: 8px;
   background: var(--logo);
   transition: margin-left 0.5s;
-} 
+}
 
-.hamburguerButton:hover div:last-child{
+.hamburguerButton:hover div:last-child {
   margin-left: 10px;
-} 
-.hamburguerButton:hover div:first-child{
+}
+.hamburguerButton:hover div:first-child {
   margin-left: 10px;
-} 
+}
 
 @media (max-width: 1350px) {
   .headerWrapper {
